Repeat Episode Implementation / Issue 778

--- a/app/src/main/res/layout/audio_controls.xml
+++ b/app/src/main/res/layout/audio_controls.xml
@@ -63,6 +63,12 @@
             android:layout_height="wrap_content"
             android:text="@string/stereo_to_mono" />
 
+        <CheckBox
+            android:id="@+id/repeat_episode"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/repeat" />
+
     </LinearLayout>
 
 </ScrollView>
