--- a/app/src/main/res/menu/nav_feed_context.xml
+++ b/app/src/main/res/menu/nav_feed_context.xml
@@ -26,4 +26,8 @@
         android:menuCategory="container"
         android:title="@string/multi_select"
         android:visible="false" />
+    <item
+        android:id="@+id/reorder"
+        android:menuCategory="container"
+        android:title="Set Priority"/>
 </menu>
