--- a/app/src/main/res/menu/queue.xml
+++ b/app/src/main/res/menu/queue.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:custom="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/queue_lock"
-        android:title=""
-        android:menuCategory="container"
-        custom:showAsAction="always" />
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        custom:showAsAction="ifRoom"
+        android:title="@string/search_label"/>
 
     <item
         android:id="@+id/refresh_item"
@@ -17,10 +16,10 @@
         android:icon="@drawable/ic_refresh"/>
 
     <item
-        android:id="@+id/action_search"
-        android:icon="@drawable/ic_search"
-        custom:showAsAction="ifRoom"
-        android:title="@string/search_label"/>
+        android:id="@+id/queue_lock"
+        android:title="@string/lock_queue"
+        android:menuCategory="container"
+        android:checkable="true" />
 
     <item
         android:id="@+id/queue_sort"
