--- a/app/src/main/res/layout/subscription_item.xml
+++ b/app/src/main/res/layout/subscription_item.xml
@@ -1,11 +1,11 @@
-<?xml version='1.0' encoding='utf-8'?>
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:squareImageView="http://schemas.android.com/apk/de.danoeh.antennapod"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:foreground="?attr/selectableItemBackground">
 
     <de.danoeh.antennapod.ui.common.SquareImageView
@@ -15,7 +15,7 @@
         android:background="@color/non_square_icon_background"
         android:scaleType="fitCenter"
         squareImageView:direction="width"
-        tools:src="@mipmap/ic_launcher_round" />
+        tools:src="@tools:sample/avatars" />
 
     <com.joanzapata.iconify.widget.IconTextView
         android:id="@+id/txtvTitle"
@@ -45,5 +45,21 @@
         app:primaryText="Test"
         app:primaryTextColor="?attr/colorOnSecondary"
         app:primaryTextSize="12sp" />
+
+    <FrameLayout
+        android:id="@+id/selectView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/ic_checkbox_background">
+
+        <CheckBox
+            android:id="@+id/selectCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:layout_margin="8dp" />
+
+    </FrameLayout>
 
 </RelativeLayout>
