Implement remove tag handler for FeedMultiSelectActionHandler.

--- a/app/src/main/res/menu/nav_feed_action_speeddial.xml
+++ b/app/src/main/res/menu/nav_feed_action_speeddial.xml
@@ -29,4 +29,9 @@
         android:id="@+id/add_to_folder"
         android:menuCategory="container"
         android:title="Add tag" />
+    <item
+        android:id="@+id/remove_tag"
+        android:menuCategory="container"
+        android:title="Remove tag" />
+
 </menu>
