Hide multi-select in nav bar

--- a/app/src/main/res/menu/nav_feed_context.xml
+++ b/app/src/main/res/menu/nav_feed_context.xml
@@ -24,5 +24,6 @@
     <item
         android:id="@+id/multi_select"
         android:menuCategory="container"
-        android:title="@string/multi_select" />
+        android:title="@string/multi_select"
+        android:visible="false" />
 </menu>
