--- a/app/src/main/res/layout/audio_controls.xml
+++ b/app/src/main/res/layout/audio_controls.xml
@@ -120,7 +120,7 @@
             android:id="@+id/repeat_episode"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/repeat" />
+            android:text="@string/repeat_episode" />
 
     </LinearLayout>
 
