--- a/app/src/main/res/layout/about_teaser.xml
+++ b/app/src/main/res/layout/about_teaser.xml
@@ -5,5 +5,6 @@
         android:layout_width="match_parent"
         android:adjustViewBounds="true"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/teaser"
+        app:srcCompat="@drawable/ic_launcher_no_bg"
+        android:background="?attr/foregroundColor"
         android:importantForAccessibility="no"/>
