Playlist feature wip

--- a/app/src/main/res/layout/simple_list_fragment.xml
+++ b/app/src/main/res/layout/simple_list_fragment.xml
@@ -8,16 +8,23 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
-        android:layout_alignParentTop="true" />
+        android:theme="?attr/actionBarTheme" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@id/toolbar"
+        android:background="?android:attr/listDivider" />
 
     <de.danoeh.apexpod.view.EpisodeItemListRecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingHorizontal="@dimen/additional_horizontal_spacing"
-        android:layout_below="@id/toolbar" />
+        android:layout_below="@id/toolbar"
+        android:paddingHorizontal="@dimen/additional_horizontal_spacing" />
 
     <ProgressBar
         android:id="@+id/progLoading"
