--- a/app/src/main/res/layout/viewholder_playlist.xml
+++ b/app/src/main/res/layout/viewholder_playlist.xml
@@ -8,5 +8,6 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        style="@style/AntennaPod.TextView.ListItemPrimaryTitle"
         android:text="TextView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
