--- a/app/src/main/res/layout/fragment_subscriptions.xml
+++ b/app/src/main/res/layout/fragment_subscriptions.xml
@@ -30,23 +30,19 @@
             android:id="@+id/tagRecycler"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             app:layout_constraintEnd_toStartOf="@id/expandTagsButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <Button
+        <ImageButton
             android:id="@+id/expandTagsButton"
-            android:layout_width="88dp"
-            android:layout_height="48dp"
-            android:layout_marginStart="24dp"
-            android:layout_marginLeft="24dp"
+            android:background="@drawable/ic_arrow_down"
             android:clickable="true"
-            android:text="More"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"  
+            android:layout_height="wrap_content" android:layout_width="wrap_content"/>
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/feedChipGroup"
