--- a/app/src/main/res/layout/itunes_podcast_listitem.xml
+++ b/app/src/main/res/layout/itunes_podcast_listitem.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingTop="8dp"
     android:paddingLeft="16dp"
+    android:paddingTop="8dp"
     android:paddingRight="16dp"
     android:paddingBottom="8dp"
     tools:background="@android:color/darker_gray">
@@ -15,25 +16,28 @@
         android:id="@+id/imgvCover"
         android:layout_width="@dimen/thumbnail_length_itemlist"
         android:layout_height="@dimen/thumbnail_length_itemlist"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
         android:adjustViewBounds="true"
-        android:importantForAccessibility="no"
         android:cropToPadding="true"
+        android:importantForAccessibility="no"
         android:scaleType="fitXY"
+        app:layout_constraintStart_toStartOf="parent"
         tools:background="@android:color/holo_green_dark"
+        tools:layout_editor_absoluteY="8dp"
         tools:src="@tools:sample/avatars" />
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:id="@+id/feedInfoLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imgvCover"
-        android:layout_toEndOf="@id/imgvCover"
         android:layout_centerVertical="true"
-        android:orientation="vertical"
+        android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp">
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@id/quickSubBtn"
+        app:layout_constraintStart_toEndOf="@id/imgvCover"
+        tools:layout_editor_absoluteY="8dp">
 
         <TextView
             android:id="@+id/txtvTitle"
@@ -49,13 +53,25 @@
             style="android:style/TextAppearance.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
-            android:textColor="?android:attr/textColorSecondary"
             android:ellipsize="middle"
             android:maxLines="2"
-            tools:text="author"
-            tools:background="@android:color/holo_green_dark"/>
+            android:textColor="?android:attr/textColorSecondary"
+            android:textSize="14sp"
+            tools:background="@android:color/holo_green_dark"
+            tools:text="author" />
 
     </LinearLayout>
 
-</RelativeLayout>
+    <ImageView
+        android:id="@+id/quickSubBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_toRightOf="@+id/feedInfoLayout"
+        android:background="@drawable/ic_check"
+        android:focusable="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+</androidx.constraintlayout.widget.ConstraintLayout>
