--- a/app/src/main/res/menu/playlists.xml
+++ b/app/src/main/res/menu/playlists.xml
@@ -2,5 +2,5 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Delete Playlist" android:id="@+id/delete_playlist" />
+    <item android:title="Delete Playlist" android:icon="@drawable/ic_delete" android:id="@+id/delete_playlist" />
 </menu>
