Disable home fragment due to incomplete implementation

--- a/core/src/main/res/values/arrays.xml
+++ b/core/src/main/res/values/arrays.xml
@@ -147,7 +147,7 @@
     </string-array>
 
     <string-array name="nav_drawer_titles">
-        <item>@string/main_fragment_label</item>
+<!--        <item>@string/main_fragment_label</item>-->
         <item>@string/queue_label</item>
         <item>@string/playlists_label</item>
         <item>@string/episodes_label</item>
