--- a/app/src/main/res/xml/preferences_playback.xml
+++ b/app/src/main/res/xml/preferences_playback.xml
@@ -119,19 +119,19 @@
                 android:title="@string/pref_skip_keeps_episodes_title"/>
     </PreferenceCategory>
 
-    <PreferenceCategory android:title="@string/experimental_pref">
-        <ListPreference
-                android:defaultValue="exoplayer"
-                android:entries="@array/media_player_options"
-                android:key="prefMediaPlayer"
-                android:title="@string/media_player"
-                android:summary="@string/pref_media_player_message"
-                android:entryValues="@array/media_player_values"/>
-        <SwitchPreferenceCompat
-                android:defaultValue="false"
-                android:enabled="true"
-                android:key="prefCast"
-                android:summary="@string/pref_cast_message"
-                android:title="@string/pref_cast_title"/>
-    </PreferenceCategory>
+<!--    <PreferenceCategory android:title="@string/experimental_pref">-->
+<!--        <ListPreference-->
+<!--                android:defaultValue="exoplayer"-->
+<!--                android:entries="@array/media_player_options"-->
+<!--                android:key="prefMediaPlayer"-->
+<!--                android:title="@string/media_player"-->
+<!--                android:summary="@string/pref_media_player_message"-->
+<!--                android:entryValues="@array/media_player_values"/>-->
+<!--        <SwitchPreferenceCompat-->
+<!--                android:defaultValue="false"-->
+<!--                android:enabled="true"-->
+<!--                android:key="prefCast"-->
+<!--                android:summary="@string/pref_cast_message"-->
+<!--                android:title="@string/pref_cast_title"/>-->
+<!--    </PreferenceCategory>-->
 </PreferenceScreen>
