--- a/core/src/main/res/values/keycodes.xml
+++ b/core/src/main/res/values/keycodes.xml
@@ -2,8 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:ignore="MissingTranslation">
 
-    <string name="keycode_media_next">87</string>
-    <string name="keycode_media_previous">88</string>
-    <string name="keycode_media_rewind">89</string>
-    <string name="keycode_media_fast_forward">90</string>
+    <string name="keycode_media_next" translatable="false">87</string>
+    <string name="keycode_media_previous" translatable="false">88</string>
+    <string name="keycode_media_rewind" translatable="false">89</string>
+    <string name="keycode_media_fast_forward" translatable="false">90</string>
 </resources>
