--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -16,6 +16,10 @@
         android:theme="?attr/actionBarTheme"
         app:title="@string/home_label" />
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <include android:id="@+id/empty_layout" layout="@layout/empty_view_layout" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -94,6 +98,7 @@
 
             </LinearLayout>
         </LinearLayout>
+
         <!--        <ProgressBar-->
 <!--                android:id="@+id/discover_progress_bar"-->
 <!--                style="?android:attr/progressBarStyle"-->
@@ -104,4 +109,15 @@
 <!--                android:layout_marginTop="30dp"/>-->
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/subscriptions_add"
+        android:layout_width="56dp"
+        android:layout_height="56dp"
+        android:layout_margin="16dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:contentDescription="@string/add_feed_label"
+        app:srcCompat="@drawable/ic_add" />
+    </RelativeLayout>
 </LinearLayout>
