--- a/app/src/main/res/xml/preferences_user_interface.xml
+++ b/app/src/main/res/xml/preferences_user_interface.xml
@@ -53,12 +53,12 @@
                 android:summary="@string/pref_expandNotify_sum"
                 android:title="@string/pref_expandNotify_title"
                 search:ignore="true"/>
-        <SwitchPreferenceCompat
-                android:defaultValue="true"
-                android:enabled="true"
-                android:key="prefPersistNotify"
-                android:summary="@string/pref_persistNotify_sum"
-                android:title="@string/pref_persistNotify_title"/>
+<!--        <SwitchPreferenceCompat-->
+<!--                android:defaultValue="true"-->
+<!--                android:enabled="true"-->
+<!--                android:key="prefPersistNotify"-->
+<!--                android:summary="@string/pref_persistNotify_sum"-->
+<!--                android:title="@string/pref_persistNotify_title"/>-->
         <Preference
                 android:key="prefCompactNotificationButtons"
                 android:summary="@string/pref_compact_notification_buttons_sum"
