--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -28,6 +28,12 @@
             android:icon="@drawable/ic_network" />
 
     <Preference
+        android:key="prefScreenDownload"
+        android:title="@string/download_label"
+        android:summary="@string/pref_download_sum"
+        android:icon="@drawable/ic_download" />
+
+    <Preference
             android:key="prefScreenSynchronization"
             android:title="@string/synchronization_pref"
             android:summary="@string/synchronization_sum"
