--- a/core/src/main/res/values/arrays.xml
+++ b/core/src/main/res/values/arrays.xml
@@ -163,12 +163,14 @@
         <item>@string/drawer_feed_order_alphabetical</item>
         <item>@string/drawer_feed_order_last_update</item>
         <item>@string/drawer_feed_order_most_played</item>
+        <item>@string/drawer_feed_order_priority</item>
     </string-array>
     <string-array name="nav_drawer_feed_order_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 
     <string-array name="nav_drawer_feed_counter_options">
@@ -266,4 +268,5 @@
         <item>EpisodesFragment</item>
         <item>SubscriptionFragment</item>
     </string-array>
+    <string name="drawer_feed_order_priority">Sort by priority</string>
 </resources>
