Remove unused hi strings

--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -14,7 +14,7 @@
         android:layout_height="wrap_content"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
-        app:title="@string/home_label" />
+        app:title="@string/home_fragment_label" />
 
     <RelativeLayout
         android:layout_width="match_parent"
