--- a/app/src/main/res/menu/subscriptions.xml
+++ b/app/src/main/res/menu/subscriptions.xml
@@ -1,19 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:custom="http://schemas.android.com/apk/res-auto">
-    <item
-            android:id="@+id/action_search"
-            android:icon="@drawable/ic_search"
-            custom:showAsAction="always"
-            android:title="@string/search_label"/>
+
     <item
             android:id="@+id/subscriptions_filter"
             android:title="@string/filter"
-            custom:showAsAction="never" />
+            android:icon="@drawable/ic_filter"
+            custom:showAsAction="always" />
     <item
             android:id="@+id/subscriptions_sort"
             android:title="@string/sort"
-            custom:showAsAction="never" />
+            android:icon="@drawable/ic_sort"
+            custom:showAsAction="always" />
+    <item
+        android:id="@+id/action_search"
+        android:icon="@drawable/ic_search"
+        custom:showAsAction="never"
+        android:title="@string/search_label"/>
     <item
             android:id="@+id/subscription_num_columns"
             android:title="@string/subscription_num_columns"
