Implement functional views for loop fragment update loop preferences

--- a/app/src/main/res/layout/loop_mode_fragment.xml
+++ b/app/src/main/res/layout/loop_mode_fragment.xml
@@ -16,12 +16,21 @@
         <TextView
             android:id="@+id/txtLoopModeTitle"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:layout_marginTop="16dp"
             android:text="Loop Mode"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
+
             tools:layout_editor_absoluteX="16dp" />
+
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/switch_enable_repeat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="Enabled"></androidx.appcompat.widget.SwitchCompat>
 
         <CheckBox
             android:id="@+id/checkbox_repeat_episode"
