--- a/app/src/main/res/layout/loop_mode_fragment.xml
+++ b/app/src/main/res/layout/loop_mode_fragment.xml
@@ -18,7 +18,7 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:text="Loop Mode"
+            android:text="@string/title_loop_mode"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
 
